force-app/main/default/objects/InvoiceOrderDebt__c/InvoiceOrderDebt__c.object-meta.xml
<CustomObject>
    <label>Invoice Order Debt</label>
    <nameField>
        <label>Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Order Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>