force-app/main/default/objects/InvoiceOrderDebt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Order Debts</relationshipLabel>
    <relationshipName>Invoice_Order_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>