force-app/main/default/objects/InvoiceOrderDebt__c/fields/COCNumber__c.field-meta.xml
<CustomField>
    <fullName>COCNumber__c</fullName>
    <formula>IF(ISBLANK(Order__r.AdditionalNumber__c), &apos;Unordered Invoice&apos;, Order__r.AdditionalNumber__c)</formula>
    <label>COC#</label>
    <type>Text</type>
</CustomField>