force-app/main/default/objects/InvoiceOrderDebt__c/fields/DaysOverdue__c.field-meta.xml
<CustomField>
    <fullName>DaysOverdue__c</fullName>
    <description>Днів протермінування</description>
    <label>Days overdue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>