force-app/main/default/objects/InvoiceOrderDebt__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Дата настання зобов&apos;язень</description>
    <label>Due date</label>
    <type>DateTime</type>
</CustomField>