force-app/main/default/objects/InvoiceOrderDebt__c/fields/InternalAccount__c.field-meta.xml
<CustomField>
    <fullName>InternalAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Внітрішні аккаунти Інтерпайп в Сейлсфорс</description>
    <label>Internal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Order Debts (Internal Account)</relationshipLabel>
    <relationshipName>Invoice_Order_Debts1</relationshipName>
    <type>Lookup</type>
</CustomField>