force-app/main/default/objects/InvoiceOrderDebt__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <externalId>true</externalId>
    <label>Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>