force-app/main/default/objects/InvoiceOrderDebt__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <description>Сума в валюті документу</description>
    <label>Net amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>