force-app/main/default/objects/InvoiceOrderDebt__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoice Order Debts</relationshipLabel>
    <relationshipName>Invoice_Order_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>