force-app/main/default/objects/InvoiceOrderDebt__c/fields/Order_COC__c.field-meta.xml
<CustomField>
    <fullName>Order_COC__c</fullName>
    <label>Order COC#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>