force-app/main/default/objects/InvoiceOrderDebt__c/fields/OutstandingDebt__c.field-meta.xml
<CustomField>
    <fullName>OutstandingDebt__c</fullName>
    <description>Залишок у валюті дкументу</description>
    <label>Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>