force-app/main/default/objects/InvoiceOrderDebt__c/fields/PortalUser__c.field-meta.xml
<CustomField>
    <fullName>PortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>PortalUser__c</referenceTo>
    <relationshipLabel>Invoice Order Debts</relationshipLabel>
    <relationshipName>Invoice_Order_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>