force-app/main/default/objects/InvoiceOrderDebt__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <description>Сума ПДВ у валюті документу</description>
    <label>VAT amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>