force-app/main/default/objects/InvoiceOrderDebt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>DaysOverdue__c</columns>
    <columns>DueDate__c</columns>
    <columns>InternalAccount__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>NetAmount__c</columns>
    <columns>OutstandingDebt__c</columns>
    <columns>VATAmount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>